+ Changed EntityListFile so zero internal on BattleArmor does not get reported as destroyed for MHQ

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.6-dev (SVN)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
 + Bug [#4584]: Vehicle Unable to Charge
++ Changed EntityListFile so zero internal on BattleArmor does not get reported as destroyed for MHQ
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
