--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -905,7 +905,7 @@ FiringDisplay.BombNumberDialog.message=Which bombs will you drop?
 FiringDisplay.fireSpot=Spot
 FiringDisplay.SpotForInderectDialog.message=Do you want to spot for indirect fire?
 FiringDisplay.SpotForInderectDialog.title=Spot For Indirect Fire?
-FiringDisplay.Strafing.StatusLabel=Strafing: select up to 5 consecutive hexes in a line along the flight path.
+FiringDisplay.Strafing.StatusLabel=Strafing: before firing, select up to 5 consecutive hexes in a line along the flight path.
 FiringDisplay.Strafing.TargetLabel=Strafing Run
 FiringDisplay.switched=Switched {0} to {1}
 FiringDisplay.fireTwist=Twist
