+ Bug [#4553]: Mech falling on bridge over water takes damage as if falling into water

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -14,7 +14,10 @@ v0.41.6-dev (SVN)
 + Bug [#4570]: PPCs can fire with charging capacitor (capacitor remains charged)
 + re-implemented Infantry.getAlternateCost for MHQ
 + corrected some errors in BattleArmor.getCost
-+ removed costs from BA Armor Misc Types because it was leading to double-counting costs
++ removed costs from BA Armor Misc Types because it was leading to 
+    double-counting costs
++ Bug [#4553]: Mech falling on bridge over water takes damage as if falling into
+    water
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
