--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,8 @@ v0.41.6-dev (SVN)
     double-counting costs
 + Bug [#4553]: Mech falling on bridge over water takes damage as if falling into
     water
++ Bug: Possible IndexOutOfBoundsException in ProtoMech.isSecondaryArcWeapon()
+    when checking quads.
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
