--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.6-dev (SVN)
     water
 + Bug: Possible IndexOutOfBoundsException in ProtoMech.isSecondaryArcWeapon()
     when checking quads.
++ additions to Mounted to account for each troopers equipment in MHQ
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
