--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.41.6-dev (SVN)
 + Bug: KeyBinds non-functional and all set to -1 if defaultKeyBind.xml not found
 + Bug: Firing arcs for Aeros on ground map not multiplied by 8
 + Bug [#4583]: Using VGLs, target information lost when cycling through weapons
++ Feature: Added MechSetTest tool to check for errors in mechset and wreckset
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
