+ Bug [#4590]: Jump Infantry Forced to Use Zip Line

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -29,6 +29,7 @@ v0.41.6-dev (SVN)
 + Feature: Added MechSetTest tool to check for errors in mechset and wreckset
 + Bug: Fixed a number of case-mismatches in mechset and wreckset
 + Bug: Artillery flak attacks use gunnery skill, even if artillery skill is on
++ Bug [#4590]: Jump Infantry Forced to Use Zip Line
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
