--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -31,7 +31,8 @@ v0.41.6-dev (SVN)
 + Bug: Artillery flak attacks use gunnery skill, even if artillery skill is on
 + Bug [#4590]: Jump Infantry Forced to Use Zip Line
 + minor changes to Protomechs for MHQ purposes, should not affect MM
-+ Data: New Sprites and Mechset fixes. 
++ Data: New Sprites and Mechset fixes.
++ Bug [#4591]: Firing causes weapons to vanish
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
