+ Bug [#4565}: Issues with Bridge over Swamp

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -34,6 +34,7 @@ v0.41.6-dev (SVN)
 + Data: New Sprites and Mechset fixes.
 + Bug [#4591]: Firing causes weapons to vanish
 + Bug: EquipmentType.equals does not properly override Object.equals
++ Bug [#4565]: Issues with Bridge over Swamp
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
