--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -8,6 +8,8 @@ Previous=Previous
 to=to
 AdvancedSearchDialog.title=Advanced Search
 AimedShotDialog.dontAim=Don't aim
+
+BoardEditor.BridgeBuildingElevError=Bridge/Building Elevation is an offset from the surface of a hex and hence must be a positive value!
 BoardEditor.butAddTerrain=Add/Set Terrain
 BoardEditor.butBoardLoad=Load...
 BoardEditor.butBoardNew=New...
@@ -26,6 +28,7 @@ BoardEditor.CouldNotInitialiseMinimap=Could not initialise minimap:\n
 BoardEditor.CouldntInitialize=Could not initialise:\n
 BoardEditor.Done=Done
 BoardEditor.FatalError=Fatal Error
+BoardEditor.invalidTerrainTitle=Invalid Terrain!
 BoardEditor.labBoard=Board:
 BoardEditor.labElev=Elev:
 BoardEditor.labHeight=Height:
@@ -46,6 +49,7 @@ BoardEditor.title=MegaMek Board Editor : Unnamed
 BoardEditor.title0=MegaMek Board Editor : 
 BoardEditor.waitDialog.message=Saving board as image...
 BoardEditor.waitDialog.title=Please wait...
+
 BoardSelectionDialog.BoardSize=Board Size (hexes):
 BoardSelectionDialog.EditBoardLaout=Edit Board Layout...
 BoardSelectionDialog.GeneratedMapSettings=Generated Map Settings
