--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.6-dev (SVN)
 + Bug [#4591]: Firing causes weapons to vanish
 + Bug: EquipmentType.equals does not properly override Object.equals
 + Bug [#4565]: Issues with Bridge over Swamp
++ Bug[#4592]: Aero fleeing Pilot Roll
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
