--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,6 +36,7 @@ v0.41.6-dev (SVN)
 + Bug: EquipmentType.equals does not properly override Object.equals
 + Bug [#4565]: Issues with Bridge over Swamp
 + Bug[#4592]: Aero fleeing Pilot Roll
++ Bug [#4547]: Terrain Level (woods/buildings) issues for aero atmospheric map
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
