--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -105,6 +105,7 @@ BoardView1.Evade=\ (Evade)
 BoardView1.flare=Flare, burning for {0} more turns
 BoardView1.GRAPPLED=GRAPPLED
 BoardView1.GRAPPLER=GRAPPLER
+BoardView1.Jammed=JAMMED
 BoardView1.Roll=Roll
 BoardView1.Heat=\ Heat 
 BoardView1.HeavySmoke={0} heavy smoke hex(es) in line of sight.\n
@@ -204,6 +205,7 @@ BoardView1.Tooltip.DFA=<BR><I><FONT COLOR=RED>(Death from Above)</FONT></I>
 BoardView1.Tooltip.AeroVelocity=<I><FONT COLOR=#400040>Current Velocity: {0}</FONT></I>
 BoardView1.Tooltip.Heat0=<FONT COLOR=#008000><I>Heat: 0</I></FONT>
 BoardView1.Tooltip.Heat=<FONT COLOR=#FF0000><I>Heat: {0}</I></FONT>
+BoardView1.Tooltip.Jammed=<FONT COLOR=#FF0000>Jammed by Enemy ECM</FONT>
 BoardView1.Tooltip.Clan=C-
 BoardView1.Tooltip.NotYetMoved=<FONT COLOR=#400040><I>Has not yet moved</I></FONT>
 BoardView1.Tooltip.NoMove=<FONT COLOR=#400040><I>Did not move (Mod: 0)</I></FONT>
