+ Separated ammo dumping and mode switching
I found that the if statement in SystemPanel.valueChanged for the when the slot
value is changed links the ammo dumping button and the mode selection drop down
This essentially means that ammo can either be dumped, or have it's mode
changed.  If dumping is allowed, mode changing isn't.  I can't see a reason for
this, so I separated the if/else into two, one for dumping and one for mode
selection.

Additionally, ammo dumping is only allowed for ammo without instant mode
switching.  Currently there aren't yet any AmmoTypes that allow instant mode
switching, but I can't see a reason for this requirement so I removed it.

Finally, I made it so that equipment that is being dumped cannot have its mode
changed.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -39,6 +39,7 @@ v0.41.6-dev (SVN)
 + Bug [#4547]: Terrain Level (woods/buildings) issues for aero atmospheric map
 + Bug: Fixed issue with BoardView1.redrawMovingEntity
 + Bug [#4576]: Errata - ECM fields for undetected enemy units no longer visible
++ Separated ammo dumping and mode switching
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
