--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -40,6 +40,7 @@ v0.41.6-dev (SVN)
 + Bug: Fixed issue with BoardView1.redrawMovingEntity
 + Bug [#4576]: Errata - ECM fields for undetected enemy units no longer visible
 + Separated ammo dumping and mode switching
++ Bug [#4556]: Artillery - Copperhead or Arrow IV Homing in "dumb" mode
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
