--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -41,6 +41,8 @@ v0.41.6-dev (SVN)
 + Bug [#4576]: Errata - ECM fields for undetected enemy units no longer visible
 + Separated ammo dumping and mode switching
 + Bug [#4556]: Artillery - Copperhead or Arrow IV Homing in "dumb" mode
++ Bug: ClassCastException (VTOL to Aero) in BasicPathRanker.rankPath() when
+    trying to handle VTOLs.
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
