--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -43,6 +43,7 @@ v0.41.6-dev (SVN)
 + Bug [#4556]: Artillery - Copperhead or Arrow IV Homing in "dumb" mode
 + Bug: ClassCastException (VTOL to Aero) in BasicPathRanker.rankPath() when
     trying to handle VTOLs.
++ Bug [#4594]: VTOL critical hits rolled on ground vehicle table.
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
