+ Bug: Dug-in field gunners would fail to fire if secondary arc changed
Infantry.isSecondaryArcWeapon would allow the field gunners to torso twist,
so the Client allows it, but then when Server processes the TorsoTwistAction
it calls Infantry.canChangeSecondaryFacing which had an additional check that
the infantry aren't dug in.  I can't find anything in the rules that indicate
digging in has any effect on field gunners changing their weapon facing, so
I removed this check.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -44,6 +44,7 @@ v0.41.6-dev (SVN)
 + Bug: ClassCastException (VTOL to Aero) in BasicPathRanker.rankPath() when
     trying to handle VTOLs.
 + Bug [#4594]: VTOL critical hits rolled on ground vehicle table.
++ Bug: Dug-in field gunners would fail to fire if secondary arc changed
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
