+ Feature: Entity tooltip now includes a list of which enemies can see the unit

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -45,6 +45,7 @@ v0.41.6-dev (SVN)
     trying to handle VTOLs.
 + Bug [#4594]: VTOL critical hits rolled on ground vehicle table.
 + Bug: Dug-in field gunners would fail to fire if secondary arc changed
++ Feature: Entity tooltip now includes a list of which enemies can see the unit
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
