+ Bug [#4589]: Unarmored/unmanned vehicles count as "crippled"     Fixed using the patch attached to the bug report

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -14,15 +14,15 @@ v0.41.6-dev (SVN)
 + Bug [#4570]: PPCs can fire with charging capacitor (capacitor remains charged)
 + re-implemented Infantry.getAlternateCost for MHQ
 + corrected some errors in BattleArmor.getCost
-+ removed costs from BA Armor Misc Types because it was leading to 
++ removed costs from BA Armor Misc Types because it was leading to
     double-counting costs
 + Bug [#4553]: Mech falling on bridge over water takes damage as if falling into
     water
 + Bug: Possible IndexOutOfBoundsException in ProtoMech.isSecondaryArcWeapon()
     when checking quads.
 + additions to Mounted to account for each troopers equipment in MHQ
-+ Data: New Sprites and Mechset fixes. 
-+ Bug [#4571]: Tertiary Swarm LRM attacks suddenly blocked by lack of LOS again 
++ Data: New Sprites and Mechset fixes.
++ Bug [#4571]: Tertiary Swarm LRM attacks suddenly blocked by lack of LOS again
 + Bug: KeyBinds non-functional and all set to -1 if defaultKeyBind.xml not found
 + Bug: Firing arcs for Aeros on ground map not multiplied by 8
 + Bug [#4583]: Using VGLs, target information lost when cycling through weapons
@@ -46,6 +46,8 @@ v0.41.6-dev (SVN)
 + Bug [#4594]: VTOL critical hits rolled on ground vehicle table.
 + Bug: Dug-in field gunners would fail to fire if secondary arc changed
 + Feature: Entity tooltip now includes a list of which enemies can see the unit
++ Bug [#4589]: Unarmored/unmanned vehicles count as "crippled"
+    Fixed using the patch attached to the bug report
 
 v0.41.5 (2015-08-04 10:10 UTC)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
