--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.7-dev (SVN)
 + Bug [#4544]: Airborne WiGE movement blocked by level 1 buildings
 + Bug [#4595]: Bad translation for PlanetaryConditions internationalization
++ Bug [#4593]: Mech in climb mode ends up on top of building post DFA
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
