--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.7-dev (SVN)
 + Bug [#4531]: Issues with Protomechs and individual initiative
 + Bug [#4598]: BestFiringPlanUnderHeat Error
 + Bug [#4597]: Vehicular Grenade Launcher Error
++ Bug [#4588]: Field Guns jamming in Rapid mode
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
