--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.7-dev (SVN)
 + Bug: standard fusion engines should be tech type T_ALLOWED ALL not 
     T_INTRO_BOXSET
 + Bug [#4599]: Princess could shoot at sensor returns
++ Feature [#1394]: Firing Arc Feature should have Option and Save
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
