--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -561,6 +561,8 @@ CommonMenuBar.viewToggleFovHighlight=Highlight within field of view
 CommonMenuBar.viewToggleFovDarken=Darken outside field of view
 CommonMenuBar.viewToggleFovDarkenTooltip=<html>Darkens hexes with no LOS to the currently selected hex. <br> The height in the source hex is based upon the selected unit or LOS settings.<br>The height in the destination hex is based on the tallest unit in that hex or LoS Settings when none are present.</html>
 CommonMenuBar.viewToggleIsometric=Isometric View
+CommonMenuBar.viewToggleFieldOfFire=Field of Fire
+CommonMenuBar.viewToggleFieldOfFireToolTip=Outline firing arcs for selected weapons
 CommonMenuBar.viewToggleFiringSolutions=Firing Solutions
 CommonMenuBar.viewToggleFiringSolutionsToolTip=During the firing phase, to-hit modifiers for each range bracket will be drawn on units 
 CommonMenuBar.moveLAMmechMode=Transform to mek mode
