--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.41.7-dev (SVN)
     T_INTRO_BOXSET
 + Bug [#4599]: Princess could shoot at sensor returns
 + Feature [#1394]: Firing Arc Feature should have Option and Save
++ Bug: BoardView1.redrawEntity could draw an EntitySprite for unspotted units
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
