Created a SkinEditorMainGUI class
This class is similar to ClientGUI, and is designed to offer a similar display
with the BoardView as the main card and a secondary card displaying the
MovementDisplay.  The idea is that there will be another floating dialog that
can be used to edit the current skin.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2188,6 +2188,7 @@ MegaMek.ScenarioDialog.otherh=Other Human
 MegaMek.ScenarioDialog.bot=Bot
 MegaMek.ScenarioDialog.otherbot=Other Bot
 MegaMek.ScenarioDialog.Camo=Camo
+MegaMek.SkinEditor.label=Skin Editor
 MegaMek.NoCamoBtn=No Camo
 MegaMek.HostScenarioAlert1.title=Start Scenario
 MegaMek.ConnectGameAlert.message=Error: enter a player name.
