+ setOriginalShots for Protos

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.41.7-dev (SVN)
 + Bug: Observers aren't able to see units in double-blind games
 + Bug [#4427]: getClosestCoordsTo Error
 + setOriginalShots in BLKBattleArmor loader for MHQ
++ setOriginalShots for Protos
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
