+ Added initial outline of SkinEditor UI
I've created a JPanel class that lays out just about all of the UI elements
required for editing the skin specification.  Pretty much all of the elements
aren't actually hooked up to anything yet, but you can at least see all of the
specifications for a skin and switch between skins.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2110,6 +2110,33 @@ VTOLMapSet.RearIS2=I.S.
 VTOLMapSet.RotorArmor=Ro.Ar.
 VTOLMapSet.RotorIS=Rotor I.S.
 VTOLMapSet.BARRating=BAR rating
+
+SkinEditor.SkinEditorDialog.Title=Skin Specification Editor
+SkinEditor.Add=Add
+SkinEditor.AddButtonToolTip=Add another Image
+SkinEditor.AddButton=Add Skin Specification
+SkinEditor.Background=Background
+SkinEditor.Borders=Borders
+SkinEditor.BottomEdge=Bottom Edge
+SkinEditor.BLC=Bottom Left Corner
+SkinEditor.BRC=Bottom Right Corner
+SkinEditor.Color=Font Color:
+SkinEditor.EnableBorders=Enable Borders
+SkinEditor.EnableBordersToolTip=<html>If disabled, element will not have any borders. <br/>Useful for buttons which may just have background images. </html>
+SkinEditor.LeftEdge=Left Edge
+SkinEditor.Path=Path:
+SkinEditor.PathToolTip=<html>Path to an image (relative to {0}). <br/> Click to select an image.</html>
+SkinEditor.RemoveButton=x
+SkinEditor.RemoveButtonToolTip=Remove this entry
+SkinEditor.RightEdge=Right Edge
+SkinEditor.ShowScrollBars=Show Scroll Bars
+SkinEditor.ShowScrollBarsToolTip=<html>Determines whether scroll bars will be shown <br/> Generally, this is only useful for the BoardViewBorder component</html>
+SkinEditor.TLC=Top Left Corner
+SkinEditor.TRC=Top Right Corner
+SkinEditor.TopEdge=Top Edge
+SkinEditor.Tiled=Tile
+SkinEditor.TiledToolTip=Enabling tiling of image (tiled images are repeated to fill the space)
+
 GeneralInfoMapSet.LocOstLCT=Server crash! Report a bug, include megameklog.txt
 GeneralInfoMapSet.invalidDesign=Invalid Design
 GeneralInfoMapSet.playerL=Player:
