+ New i18n entries for new UI components

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2115,20 +2115,26 @@ SkinEditor.SkinEditorDialog.Title=Skin Specification Editor
 SkinEditor.Add=Add
 SkinEditor.AddButtonToolTip=Add another Image
 SkinEditor.AddButton=Add Skin Specification
+SkinEditor.AddCompButton=Add Component
+SkinEditor.AddCompButtonToolTip=Add a new component, which is a string linked to a skin specification.
 SkinEditor.Background=Background
 SkinEditor.Borders=Borders
 SkinEditor.BottomEdge=Bottom Edge
 SkinEditor.BLC=Bottom Left Corner
 SkinEditor.BRC=Bottom Right Corner
 SkinEditor.Color=Font Color:
+SkinEditor.ColorChoice=Select Font Color
 SkinEditor.EnableBorders=Enable Borders
 SkinEditor.EnableBordersToolTip=<html>If disabled, element will not have any borders. <br/>Useful for buttons which may just have background images. </html>
 SkinEditor.LeftEdge=Left Edge
 SkinEditor.Path=Path:
 SkinEditor.PathToolTip=<html>Path to an image (relative to {0}). <br/> Click to select an image.</html>
+SkinEditor.RightEdge=Right Edge
 SkinEditor.RemoveButton=x
 SkinEditor.RemoveButtonToolTip=Remove this entry
-SkinEditor.RightEdge=Right Edge
+SkinEditor.RemoveCompButton=Remove Component
+SkinEditorResestSkinButton=Reset skin
+SkinEditor.SaveSkinButton=Save Skin
 SkinEditor.ShowScrollBars=Show Scroll Bars
 SkinEditor.ShowScrollBarsToolTip=<html>Determines whether scroll bars will be shown <br/> Generally, this is only useful for the BoardViewBorder component</html>
 SkinEditor.TLC=Top Left Corner
