--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.7-dev (SVN)
 + Bug [#4427]: getClosestCoordsTo Error
 + setOriginalShots in BLKBattleArmor loader for MHQ
 + setOriginalShots for Protos
++ Bug [#4603]: Weapon Order always revert to default
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
