+ New i18n entries for Skin Editor

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2117,6 +2117,8 @@ SkinEditor.AddButtonToolTip=Add another Image
 SkinEditor.AddButton=Add Skin Specification
 SkinEditor.AddCompButton=Add Component
 SkinEditor.AddCompButtonToolTip=Add a new component, which is a string linked to a skin specification.
+SkinEditor.AddCompMsg=Type the name of the component to add
+SkinEditor.AddCompTitle=Add Component
 SkinEditor.Background=Background
 SkinEditor.Borders=Borders
 SkinEditor.BottomEdge=Bottom Edge
