+ Data: New Sprites

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.7-dev (SVN)
 + setOriginalShots in BLKBattleArmor loader for MHQ
 + setOriginalShots for Protos
 + Bug [#4603]: Weapon Order always revert to default
++ Data: New Sprites
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
