+ MechView constructor that allows for display of alterate costs

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.7-dev (SVN)
 + setOriginalShots for Protos
 + Bug [#4603]: Weapon Order always revert to default
 + Data: New Sprites
++ MechView constructor that allows for display of alterate costs
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
