+ Bug: Hammerhead, roll, half roll, maneuvers allowed free facing changes
If the isManeuver state of MoveStep is set, then Aeros can make turns.  This
state was set for Hammerhead, roll, and half roll although these maneuvers
shouldn't allow facing changes.  The free facing changes for maneuvers must
stay in order for Immelmann's and Split-S's to work correctly.  Currently,
MoveStep.isManeuver() is only used to check for free turns.  So, to fix the
issue, I just made it so that Hammerheard, roll, and half-roll don't set the
isManeuver state.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.41.7-dev (SVN)
 + Bug: Direct/Glancing Blow applies both cluster and damage modifier to rapid-
     fire autocannons (should be cluster only in rapid-fire modes).
 + Bug [#4606]: Careful Stand doesn't end movement on failure
++ Bug: Hammerhead, roll, half roll, maneuvers allowed free facing changes
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
