--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -25,6 +25,7 @@ v0.41.7-dev (SVN)
     fire autocannons (should be cluster only in rapid-fire modes).
 + Bug [#4606]: Careful Stand doesn't end movement on failure
 + Bug: Hammerhead, roll, half roll, maneuvers allowed free facing changes
++ Bug [#4608]: Added more hotkeys for targeting phase (similar to firing phase)
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
