--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,8 @@ v0.41.7-dev (SVN)
 + Bug [#4606]: Careful Stand doesn't end movement on failure
 + Bug: Hammerhead, roll, half roll, maneuvers allowed free facing changes
 + Bug [#4608]: Added more hotkeys for targeting phase (similar to firing phase)
++ Bug [#4607]: Check for "crippled" condition doesn't work for GunEmplacement
+    instances
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
