--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -28,6 +28,7 @@ v0.41.7-dev (SVN)
 + Bug [#4608]: Added more hotkeys for targeting phase (similar to firing phase)
 + Bug [#4607]: Check for "crippled" condition doesn't work for GunEmplacement
     instances
++ Bug [#4605]: Escape doesn't seem to work occassionally
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
