--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,8 @@ v0.41.7-dev (SVN)
 + Bug [#4603]: Weapon Order always revert to default
 + Data: New Sprites
 + MechView constructor that allows for display of alterate costs
++ detailed weapon bay description in MechView
++ Bug: weapon criticals on vehicles and aeros do not damage the critical slot
 
 v0.41.6 (2015-08-15 19:40 UTC)
 + Bug [#4587]: "Packet Pump" Error during Princess Movement
