--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1216,6 +1216,7 @@ MechView.DWPBurdened=Burdened by unjettisoned DWP
 MechView.Industrial=\ Industrial
 MechView.Heavy\ Industrial=\ Heavy Industrial
 MechView.Commercial=\ Commercial
+MechView.WeaponDamage=\ weapon(s) damaged
 MineDensityDialog.title=Mine Density
 MineDensityDialog.labDensity=Density
 MineLayingDialog.title=Mine Selection
