--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,8 @@
 VERSION HISTORY:
 ----------------
+v0.41.9 (git)
++ Bug: Infantry BLK files with true/false for antimek fail to load
+
 v0.41.8 (2015-08-30 16:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
 + Bug: Key binds will now function when parsing defaultKeyBinds.xml fails
