+ Bug [#4615]: Vehicle Cannot Deploy On Bridge Over Water

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,7 @@ v0.41.9 (git)
 + Bug: Ghost targets option doesn't work without ECCM
 + Bug [#4623]: Cargo Bay and Bomb Bay missing
 + Bug [#4620]: Bombs attacks for Aeros now computed at the start of every round
++ Bug [#4615]: Vehicle Cannot Deploy On Bridge Over Water
 
 v0.41.8 (2015-09-01 12:10 UTC)
 + Bug: EjectedCrew entities not getting pilot processed in by MulParser
