+ Bug [#4292]: Double blind, enemy BV never shown (now game option to show bv)

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -121,6 +121,8 @@ GameOptionsInfo.option.tacops_sensors.displayableName=TacOps Sensor Rules
 GameOptionsInfo.option.tacops_sensors.description=If checked,units will be able to spot other units via sensors as well as line of sight
 GameOptionsInfo.option.supress_all_double_blind_messages.displayableName=No Double Blind Messages
 GameOptionsInfo.option.supress_all_double_blind_messages.description=If checked,\nall Double blind messages will be supressed.\nYou will only see messages from major events and units in LOS.\nUnchecked by default.
+GameOptionsInfo.option.suppress_double_blind_bv.displayableName=Hide Battle Value reports
+GameOptionsInfo.option.suppress_double_blind_bv.description=If checked,\n and double blind is on Battle Value will be hidden in the initiative report, \nand /checkbv commands won't display enemy BV.
 GameOptionsInfo.option.team_vision.displayableName=Teams share vision
 GameOptionsInfo.option.team_vision.description=If checked,\nteams will share vision in double-blind mode.\n Only valid in double-blind mode.\nChecked by default.
 GameOptionsInfo.option.tacops_bap.displayableName=TacOps Beagle Active Probes
