--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.10 (git)
 + Bug [#4628]: Battle Value of the Void-Signature System
 + Feature [#555]: Double-clicking locations in Armor tab selects that location
     in Systems tab
++ Bug [#4292]: Double blind, enemy BV never shown (now game option to show bv)
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
