+ Bug [#4234]: Added Mine Clearance missile munitions

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -132,6 +132,9 @@
 2245=<data> attempts to clear a(n) <data> mine in hex <data>:
 2246=<data> attempts to clear a(n) <data> mine in hex <data> with mine clearance manipulators:
 2250=<data> needs <data>, rolls <data>: minefield cleared.
+2251=Minefield in hex <data> has density reduced by <data>!
+2252=Minefield in hex <data> cleared!
+2253=<data> is protected from the Minefield Clearance munitions and takes no damage
 2255=<data> needs <data>, rolls <data>: minefield is accidently detonated!
 2260=<data> needs <data>, rolls <data>: minefield clearance fails.
 2265=<data> is damaged in a minefield accident.
