--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.41.10 (git)
     in Systems tab
 + Bug [#4292]: Double blind, enemy BV never shown (now game option to show bv)
 + Bug: Movement Envelop and Firing Arcs sometimes remain between phases/turns
++ Bug [#4234]: Added Mine Clearance missile munitions
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
